--- a/E-commers-main/package.json
+++ b/E-commers-main/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
